<resources>
    <string name="app_name">苏州市立医院</string>
    <!-- 使用数组资源初始化对话框中的数据 -->
    <string-array name="arr_times">
        <item>1天1次</item>
        <item>1天2次</item>
        <item>1天3次</item>
        <item>1天4次</item>
    </string-array>

    <!-- 上拉加载下拉刷新 -->
    <string name="pull_down_for_refresh">下拉可以刷新</string>
    <string name="label_update">更新</string>
    <string name="label_last_time">更新时间</string>
    <string name="pull_up_for_more">上拉加载</string>
    <string name="click_for_more">点击加载</string>
    <string name="release_for_more">松开可以加载</string>
    <string name="release_for_refresh">松开可以刷新</string>
    <string name="refreshing">加载中。。。</string>
    <string name="no_more">没有更多数据</string>
    <string name="colon">：</string>
    <string name="asterisk">*</string>
    <string name="loading">加载中..</string>
    <string name="loading_title">信息加载</string>
    <string name="loading_wait">正在拼命加载中,请耐心等待....</string>
    <string name="submitting_wait">正在提交,请稍等....</string>
    <string name="neterror">网络错误，请检查网络连接情况！</string>
    <string name="no_data">无数据</string>
    <string name="direction_left">&lt;</string>
    <string name="direction_right">&gt;</string>

    <string name="get_check_code">获取验证码</string>
    <string name="message_check">短信验证</string>
    <string name="hospital_introduce">医院介绍</string>
    <string name="hospital_info">发展历程 信息介绍</string>
    <string name="health_tools">健康工具</string>
    <string name="health_tools_below">服药提醒 药品知识</string>
    <string name="health_test">健康体检</string>
    <string name="health_test_below">健康教育 体检健康</string>
    <string name="text_szsldq">苏州市立医院东区</string>
    <string name="text_project_company">技术支持 创业软件股份有限公司</string>
    <string name="text_phone_number">0512-62364720</string>
    <string name="str_picture">图片</string>
    <string name="health_center">体检中心</string>
    <string name="especial_center">特检中心</string>

    <!--云诊室-->
    <string name="cloud_clinic">互联网诊室</string>
    <string name="cloud_reservation">预约</string>
    <string name="cloud_waiting">候诊</string>
    <string name="cloud_pay">支付</string>
    <string name="cloud_pay_description">支付说明性文字</string>
    <string name="cloud_sign_in">签到</string>
    <string name="appointment_record">预约记录</string>
    <string name="query_appointment_record">随时随地查询预约记录</string>
    <string name="cloud_service">互联网诊室服务</string>
    <string name="cloud_report">报告</string>
    <string name="cloud_report_check">报告检验报告</string>
    <string name="go_query">去查询</string>
    <string name="cloud_file">档案</string>
    <string name="cloud_file_mark">问诊就诊记录</string>
    <string name="expert_clinic">专家门诊</string>
    <string name="ordinary_clinic">专科门诊</string>
    <string name="feature_clinic">特色门诊</string>
    <string name="cloud_appointment_registration">互联网挂号</string>
    <string name="cloud_selection_department">选择科室</string>
    <string name="introduce">简介</string>
    <string name="please_input_department_name">请输入科室名称</string>
    <string name="please_input_doc_name">请输入医生名字</string>
    <string name="appointment">预约</string>
    <string name="time_period">时段</string>
    <string name="total_amount">总号</string>
    <string name="remind_amount">余号</string>
    <string name="state">状态</string>
    <string name="appoint">挂号</string>
    <string name="appointment_time">挂号时间：</string>
    <string name="sudden_disease">所患疾病</string>
    <string name="undiagnosed_result">如未确诊请填写尚未确诊</string>
    <string name="condition_description">病情描述</string>
    <string name="sick_description">填写病情描述，如疾病名称、症状、治疗经历及想要获得的帮助</string>
    <string name="add_sick_pic">添加病历照片</string>
    <string name="sick_next">下一步</string>
    <string name="sick_image_description">添加有关疾病的病历或检验检查图片，方便医生就诊</string>
    <string name="cloud_dept_name">科室名称</string>
    <string name="patient_doctor">就诊医生：</string>
    <string name="doctor_name">暂无医生</string>
    <string name="current_number">当前叫号</string>
    <string name="myself_number">我的号码</string>
    <string name="treatment_time">就诊时间：</string>
    <string name="refresh">刷新</string>
    <string name="date">2018-09-10</string>
    <string name="invite_video">邀请您进入视频就诊...</string>
    <string name="video_doctor">周小红医生</string>
    <string name="video_refuse">拒绝</string>
    <string name="video_accept">接受</string>
    <string name="cloud_pending_item">待支付项目</string>
    <string name="cloud_paid_item">已支付项目</string>

</resources>
