<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_yysj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="挂号日期"
        android:textSize="@dimen/sp_13"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/text_yysj"
            android:layout_weight="4"
            android:text="@string/time_period"/>

        <TextView
            style="@style/text_yysj"
            android:layout_weight="2"
            android:text="@string/total_amount"/>

        <TextView
            style="@style/text_yysj"
            android:layout_weight="2"
            android:text="@string/remind_amount"/>

        <TextView
            style="@style/text_yysj"
            android:layout_weight="2"
            android:text="@string/state"/>

        <TextView
            style="@style/text_yysj"
            android:layout_weight="3"
            android:text="@string/appoint"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>