<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <View
        style="@style/line_outer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_15"
            android:text="@string/cloud_dept_name"
            android:textColor="@color/text_gray2"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|end"
            android:text="@string/patient_doctor"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tv_doctor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/doctor_name"
            android:textColor="@color/text_gray2"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

    <View
        style="@style/line_inner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/current_number_color"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_number"
                android:textColor="@color/image_backgroud"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_myself_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="@color/gray_color"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myself_number"
                android:textColor="@color/image_backgroud"/>
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/line_inner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treatment_time"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/sp_14"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/text_gray2"
            android:textSize="@dimen/sp_14"/>


        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_blue_refresh"
            android:text="@string/refresh"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <View
        style="@style/line_outer"/>

</LinearLayout>