<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@mipmap/bg_cloud_waiting"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/avtar"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/tv_video_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_doctor"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_video"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cloud_refuse_accept"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_refuse"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/bg_cloud_video_refuse"
            android:text="@string/video_refuse"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"/>

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_weight="1"
            android:background="@drawable/bg_cloud_video_accept"
            android:text="@string/video_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"/>
    </LinearLayout>
</LinearLayout>