<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_cloud"
              android:orientation="vertical">

    <com.app.tanklib.view.BsoftActionBar
        android:id="@+id/actionbar"
        style="@style/BsoftActionBar">
    </com.app.tanklib.view.BsoftActionBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_weight="1"
                    android:text="@string/sudden_disease"
                    android:textColor="@color/text_gray2"
                    android:textSize="14sp"/>
                <EditText
                    android:id="@+id/et_sudden_disease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:background="@color/white"
                    android:hint="@string/undiagnosed_result"
                    android:textColor="@color/gray_color"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                style="@style/line_outer"/>

            <View
                style="@style/line_outer"
                android:layout_marginTop="@dimen/dp_15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@string/condition_description"
                    android:textColor="@color/text_gray2"
                    android:textSize="14sp"/>

                <View
                    style="@style/line_inner"/>

                <EditText
                    android:id="@+id/et_condition_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/sick_description"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_15"
                    android:paddingBottom="32dp"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/sp_13"/>

                <View
                    style="@style/line_outer"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_15"
                    android:background="@color/bg_cloud"/>

                <View
                    style="@style/line_outer"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@string/add_sick_pic"
                    android:textColor="@color/text_gray2"
                    android:textSize="14sp"/>

                <View
                    style="@style/line_inner"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@string/sick_image_description"
                    android:textColor="@color/gray_color"
                    android:textSize="@dimen/sp_13"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@null"
                    android:src="@drawable/sick_hint"/>
            </LinearLayout>


            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_margin="@dimen/dp_15"
                android:background="@drawable/bigbut_blue"
                android:text="@string/sick_next"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>