<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:background="@color/bg_gray"
    android:orientation="vertical">

    <com.app.tanklib.view.BsoftActionBar
        android:id="@+id/actionbar"
        style="@style/BsoftActionBar">
    </com.app.tanklib.view.BsoftActionBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/text_szsldq"
                android:textColor="@color/actionbar_bg"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_qr_code"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_barcode"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/text_project_company"
                android:textColor="#C5C5C5"
                android:textSize="16sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/text_phone_number"
                android:textColor="#C5C5C5"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
