<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_cloud"
              android:orientation="vertical">

    <com.app.tanklib.view.BsoftActionBar
        android:id="@+id/actionbar"
        style="@style/BsoftActionBar">
    </com.app.tanklib.view.BsoftActionBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="217.5dp"
                android:background="@mipmap/cloud_home"
                android:contentDescription="@null"/>

            <View
                style="@style/line_outer"
                android:layout_marginTop="@dimen/dp_15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_cloud_reservation"
                    android:layout_width="151dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="79dp"
                        android:layout_height="79dp"
                        android:contentDescription="@null"
                        android:src="@mipmap/cloud_reservation"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_17"
                        android:text="@string/cloud_reservation"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/sp_14"/>
                </LinearLayout>

                <View
                    style="@style/line_inner_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@null"
                                android:src="@mipmap/cloud_waiting"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_8"
                                android:text="@string/cloud_waiting"
                                android:textColor="@color/black_text"
                                android:textSize="@dimen/sp_14"/>
                        </LinearLayout>

                        <View
                            style="@style/line_inner_vertical"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@null"
                                android:src="@mipmap/cloud_pay"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_8"
                                android:text="@string/cloud_pay"
                                android:textColor="@color/black_text"
                                android:textSize="@dimen/sp_14"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        style="@style/line_inner"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/appointment_record"
                                android:textColor="@color/black_text"
                                android:textSize="@dimen/sp_14"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_8"
                                android:text="@string/query_appointment_record"
                                android:textColor="@color/gray_color"
                                android:textSize="@dimen/sp_11"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="53dp"
                            android:layout_height="53dp"
                            android:layout_marginLeft="@dimen/dp_17"
                            android:src="@mipmap/appointment_record"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                style="@style/line_outer"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:orientation="vertical">

                <View
                    style="@style/line_outer"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cloud_service"
                        android:textColor="@color/black_text"
                        android:textSize="@dimen/sp_13"/>
                </LinearLayout>

                <View
                    style="@style/line_inner"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cloud_report"
                                android:textColor="@color/black_text"
                                android:textSize="14.5sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6.5dp"
                                android:text="@string/cloud_report_check"
                                android:textColor="@color/gray_color"
                                android:textSize="@dimen/sp_11"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6.5dp"
                                android:text="@string/go_query"
                                android:textColor="@color/black_text"
                                android:textSize="14.5sp"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="33dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="@dimen/dp_15"
                            android:contentDescription="@null"
                            android:src="@mipmap/cloud_report"/>
                    </RelativeLayout>

                    <View
                        style="@style/line_inner_vertical"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cloud_file"
                                android:textColor="@color/black_text"
                                android:textSize="14.5sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6.5dp"
                                android:text="@string/cloud_file_mark"
                                android:textColor="@color/gray_color"
                                android:textSize="@dimen/sp_11"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6.5dp"
                                android:text="@string/go_query"
                                android:textColor="@color/black_text"
                                android:textSize="14.5sp"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="33dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="@dimen/dp_15"
                            android:contentDescription="@null"
                            android:src="@mipmap/cloud_file"/>
                    </RelativeLayout>

                </LinearLayout>
                <View
                    style="@style/line_outer"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>